--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^19.1.1",
     "react-leaflet": "^5.0.0",
     "react-scripts": "5.0.1",
-    "typescript": "^5.9.2",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,5 +42,10 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.20"
+  },
+  "overrides": {
+    "nth-check": "2.0.1",
+    "postcss": "8.4.31",
+    "webpack-dev-server": "5.2.2"
   }
 }
